--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 								<!-- <a href="images/Lumen-logo-R.svg" class="image fit thumb"><img src="images/Lumen-logo-R.svg" alt="" /></a> -->
 								<h1><b>Experience:</b></h1></header>
 								<h2>Lumen 2016-Present</h2>
-								<h3>Senior CDN Operations Engineer</h3>
-								<p>Operational lead for testing and production management of all new code releases</p>
+								<h3>Senior Content Delivery Network (CDN) Operations Engineer</h3>
+								<p>Operational lead for testing and production management of new code releases</p>
+								<li>Developed and executed test plans for new code releases, including manual and automated testing via BASH and Python</li>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
 								<p>Tier 3 support for internal and external customers</p>
 								<p>Liason between operations team and engineering, development, planning, sales, and management teams</p>
