--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
 								<h3>Senior Content Delivery Network (CDN) Operations Engineer</h3>
 								<p>Operational lead for testing and production management of new code releases</p>
 								<li>Developed and executed test plans for new code releases, including manual and automated testing via BASH and Python</li>
+								<li>Rolled out approved code to the network via automated services</li>
 								<p>Maintained operational functionality of 20,000+ Linux servers</p>
+								<li>Included troubleshooting of CentOS servers, network components, DNS resolution, certificate management, and HTTP configurations</li>
 								<p>Tier 3 support for internal and external customers</p>
+								<li>Top level operations support for escalated issues and configuration changes</li>
 								<p>Liason between operations team and engineering, development, planning, sales, and management teams</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
