--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
 								<h1><b>Experience:</b></h1></header>
 								<h2>Lumen 2016-Present</h2>
 								<h3>Senior Content Delivery Network (CDN) Operations Engineer</h3>
-								<p>Operational lead for testing and production management of new code releases</p>
+								<h3>Operational lead for testing and production management of new code releases</h3>
 								<li>Developed and executed test plans for new code releases, including manual and automated testing via BASH and Python</li>
 								<li>Rolled out approved code to the network via automated services</li>
-								<p>Maintained operational functionality of 20,000+ Linux servers</p>
+								<h3>Maintained operational functionality of 20,000+ Linux servers</h3>
 								<li>Included troubleshooting of CentOS servers, network components, DNS resolution, certificate management, and HTTP configurations</li>
-								<p>Tier 3 support for internal and external customers</p>
+								<h3>Tier 3 support for internal and external customers</h3>
 								<li>Top level operations support for escalated issues and configuration changes</li>
-								<p>Liason between operations team and engineering, development, planning, sales, and management teams</p>
+								<h3>Liason between operations team and engineering, development, planning, sales, and management teams</h3>
+								<li>All requests, escalations, and code changes funnel through my team.  This includes receiving tasks from other teams and driving them to completion, as well as mentoring junior engineers.</li>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
