--- a/index.html
+++ b/index.html
@@ -81,19 +81,26 @@
 								<!-- <a href="images/six_actual_software_logo.jpeg" class="image fit thumb"><img src="images/six_actual_software_logo.jpeg" alt="" /></a> -->
 								<h2>Six Actual Software 2015-2016</h2>
 								<h3>Software Solutions Engineer</h3>
-								<p>Agile product owner for a "new to the industry" application</p>
-								<p>Gathered all requirements, wrote user stories and drove them to completion</p>
-								<p>Managed budget, hours, and burn down for the multi-million dollar project</p>
+								<h3>Agile product owner for a "new to the industry" application</h3>
+								<li>Used CI/CD to automate our customer's agricultural full stack of software</li>
+								<h3>Gathered all requirements, wrote user stories and drove them to completion</h3>
+								<li>Communicated with stakeholders to gather requirements and then ensure our development team completed them timely and accurately</li>
+								<li>Managed budget, hours, and burn down for the multi-million dollar project</li>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a> -->
 								<h2>Level 3 Communications 2012-2015</h2>
-								<h3>Operations Engineer</h3>
-								<p>Led operational integration efforts for all collaboration products into the Level 3 workflows</p>
-								<p>Managed all production traffic for $180M in collaboration revenue</p>
-								<p>Lead Splunk implementation engineer</p>
-								<p>Tier 3 support for worldwide data and telecommunications networks</p>
-								<p>Tier 3 interface for vendor technologies, including software releases and co-locations</p>
+								<h3>Senior Collaboration Products Operations Engineer</h3>
+								<h3>Led operational integration efforts for all collaboration products into the Level 3 workflows</h3>
+								<li>Developed and executed test plans for new products and code releases</li>
+								<li>Lead engineer for a new platform from the discovery phase all the way into production</li>
+								<h3>Managed all production traffic for $180M in collaboration revenue</h3>
+								<li>Maintained functionality of Unix servers and underlying network.  Authored disaster recovery procedures and implemented them when necessary</li>
+								<h3>Lead Splunk implementation engineer</h3>
+								<li>Installed Splunk throughout the network and wrote queries and dashboards for support teams, sales, and management </li>
+								<h3>Tier 3 support for worldwide data and telecommunications networks</h3>
+								<li>Top level support for internal SIP, VoIP, and switched network, as well as external PSTN and partner telephony networks</li>
+								<li>Top level support for software and hardware vendors, and co-location support</li>
 							</article>
 						</div>
 					</section>
